--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - '443:443'
     restart: always
     environment:
-      DOMAINS: 'localhost -> http://web:8000'
-      STAGE: 'local'
+      DOMAINS: '${DOMAINS} -> http://web:8000'
+      STAGE: "${STAGE}"
     volumes:
     - ./docker/org-chimata-ssl-certs:/var/lib/https-portal
       
@@ -34,8 +34,8 @@ services:
     ports: 
       - 3306:3306
     environment:
-        - MYSQL_DATABASE=MYSQL_DATABASE
-        - MYSQL_ROOT_PASSWORD=nao-seike
+        - MYSQL_DATABASE="${MYSQL_DATABASE}"
+        - MYSQL_ROOT_PASSWORD="${MYSQL_ROOT_PASSWORD}"
     volumes:
       - mysql_data:/var/lib/mysql
   
