--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     environment:
       DOMAINS: '${DOMAINS} -> http://web:8000'
-      STAGE: "${STAGE}"
+      STAGE: $STAGE
     volumes:
     - ./docker/org-chimata-ssl-certs:/var/lib/https-portal
       
@@ -35,8 +35,8 @@ services:
     ports: 
       - 3306:3306
     environment:
-        - MYSQL_DATABASE="${MYSQL_DATABASE}"
-        - MYSQL_ROOT_PASSWORD="${MYSQL_ROOT_PASSWORD}"
+        - MYSQL_DATABASE=$MYSQL_DATABASE
+        - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
     volumes:
       - mysql_data:/var/lib/mysql
   
